--- a/react/styles/pages/timechart.module.scss
+++ b/react/styles/pages/timechart.module.scss
@@ -1,13 +1,15 @@
+@import "../themes/colors.scss";
+
 .timchart-container {
     width: 100%;
     min-height: 100vh;
 
     .timechart-selector {
         padding-top: 10px;
-        box-shadow: 0 -2px 4px black;
+        box-shadow: 0 -2px 4px $grey-1;
         position: sticky;
         bottom: 0; 
-        background-color: white;
+        background-color: $grey-2;
     }
 
     .timechart-preview{
