--- a/react/styles/globals.scss
+++ b/react/styles/globals.scss
@@ -6,6 +6,10 @@ body,svg{
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+body {
+  background-color: #1b1b1b;
+}
+
 a {
   color: inherit;
   text-decoration: none;
