--- a/react/styles/pages/home.module.scss
+++ b/react/styles/pages/home.module.scss
@@ -1,9 +1,12 @@
+@import '../themes/colors.scss';
+
 .container {
     width: 100%;
     padding-bottom: 8em;
     display: flex;
     flex-direction: column;
     align-items: center;
+    color: $blue-1;
 
     .title-1 {
         margin-top: 4em
@@ -21,7 +24,7 @@
         }
 
         .image{
-            box-shadow: 1px 1px 10px black;
+            box-shadow: 1px 1px 10px $grey-3;
         } 
     }
 }
