--- a/react/styles/pages/home.module.scss
+++ b/react/styles/pages/home.module.scss
@@ -7,24 +7,33 @@
     flex-direction: column;
     align-items: center;
     color: $blue-1;
+    margin-top: 3em;
 
-    .title-1 {
-        margin-top: 4em
+    .title {
+        margin-top: 0;
     }
 
-    .description {
-        margin-top: 3em;
-        display: flex;
-        justify-content: space-around;
-        width: 100%;
+    .title-1 {
+        margin-bottom: 0;
+    }
 
-        & > div {
-            display: flex;
-            align-items: center;
-        }
+    .title-2 {
+        margin-bottom: 2em;
+    }
 
-        .image{
-            box-shadow: 1px 1px 10px $grey-3;
-        } 
+    .my-image{
+        margin-top: 2em;
+        box-shadow: 1px 1px 10px $grey-3;
+    } 
+
+    .description-block {
+        padding: 1em;
+        padding-top: 2em;
+        max-width: 50em;
+    }
+
+    .title-block {
+        padding: 1em;
+        max-width: 50em;
     }
 }
