--- a/react/styles/pages/home.module.scss
+++ b/react/styles/pages/home.module.scss
@@ -7,7 +7,21 @@
     flex-direction: column;
     align-items: center;
     color: $blue-1;
-    margin-top: 3em;
+    padding-top: 3em;
+    position: relative;
+    
+    &::before {
+        background-image: url('https://gitlab.com/dwt1/wallpapers/-/raw/master/0016.jpg');
+        background-repeat: no-repeat;
+        background-size: fill;
+        content: "";
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+        filter: opacity(0.15);
+    }
 
     .title {
         margin-top: 0;
