--- a/react/styles/layout/DefaultLayout.module.scss
+++ b/react/styles/layout/DefaultLayout.module.scss
@@ -1,6 +1,7 @@
 .menu-item-icon {
     font-size: 1em !important;
     line-height: 0.5em !important;
+    width: 0.1em;
 }
 
 .menu-item {
@@ -12,13 +13,14 @@
 }
 
 .sider {
-    overflow: auto;
+    overflow: hidden;
     height: 100vh;
     position: fixed;
     left: 0;
     top: 0;
     bottom: 0;
-
+    width: 1em;
+    z-index: 1;
 
     .sider-menu {
         display: flex;
