--- a/react/styles/pages/timechart.module.scss
+++ b/react/styles/pages/timechart.module.scss
@@ -8,6 +8,7 @@
         padding-top: 10px;
         box-shadow: 0 -2px 4px $grey-1;
         position: sticky;
+        z-index: 2;
         bottom: 0; 
         background-color: $grey-2;
     }
